# claude-resume

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  cc-restore  claude-resume  pyproject.toml  train_classifier.py
.claude/skills/resume-resume-a1/: SKILL.md
.ike/tasks/: TASK-0019 - perf-001-dirty-repos-cold-path-further-optimizatio.md  TASK-0021 - dx-001-mcp-layer-integration-test-suite.md  TASK-0022 - a1-skill-add-known-issues-md-dedup-regression-dete.md
brand/marketing/: linkedin-article-2.md  linkedin-article.md
brand/marketing/video/: storyboard.md
claude_resume/: __init__.py  classifier.pkl  cli.py  local_llm.py  mcp_server.py  self_report.py  sessions.py  summarize.py  ui.py  ui_v2.py
claude_resume/data_science/: __init__.py  analytics.py  charts.py  mcp_tools.py  models.py  report.py  scanner.py
docs/: DESCRIPTION.md  EIDOS-FORGES.md  known-issues.md
resume_resume/: mcp_server.py  self_tools.py  session_utils.py  telemetry_query.py
scripts/: roi.py
tests/: benchmark_l2_validation.json  benchmark_queries.json  benchmark_results.json  test_mcp_surface.py  test_perf_regression.py  test_telemetry.py
