[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-resume"
version = "0.1.0"
description = "Post-crash Claude Code session recovery TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "claude-session-commons",
    "textual>=0.40",
    "numpy",
    "mcp>=1.0",
    "mcp-self-report",
]

[project.optional-dependencies]
local = [
    "mlx-lm>=0.31",
]
train = [
    "pandas",
    "scikit-learn",
]

[project.scripts]
claude-resume = "claude_resume.cli:main"
claude-resume-mcp = "claude_resume.mcp_server:main"
cr = "claude_resume.cli:main"
