[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-resume"
version = "0.4.0"
description = "Post-crash Claude Code session recovery TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "claude-session-commons>=0.1.0",
    "textual>=0.40",
    "numpy",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
local = [
    "mlx-lm>=0.31",
]
train = [
    "pandas",
    "scikit-learn",
]

[project.scripts]
resume-resume = "resume_resume.cli:main"
resume-resume-mcp = "resume_resume.mcp_server:main"
cr = "resume_resume.cli:main"

[tool.setuptools.packages.find]
include = ["resume_resume*"]
